--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -15,6 +15,13 @@ on:
         default: 'World'
         # Input has to be provided for the workflow to run
         required: true
+      name:
+        # Friendly description to be shown in the UI instead of 'name'
+        description: 'Cat to greet'
+        # Default value if no value is explicitly provided
+        default: 'Kitty'
+        # Input has to be provided for the workflow to run
+        required: true
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
