--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -37,7 +37,7 @@ jobs:
       run: echo "Hello ${{ github.event.inputs.name }}"
 
     # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
+    steps2:
     # Runs a single command using the runners shell
     - name: Send greeting
       run: echo "Hello ${{ github.event.inputs.name2 }}"
