--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -1,16 +1,9 @@
-
-name: Hello World
-
-# Controls when the action will run. Workflow runs when manually triggered using the UI
-# or API.
-on:
-  workflow_dispatch:
+name: hello world
 
 jobs:
   greet:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
     steps:
     - name: greet person
-      run: echo "Hello World"
+      run: echo "Hello ${{ github.event.inputs.person }}"
