--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -9,4 +9,4 @@ jobs:
 
     steps:
     - name: greet person
-      run: echo "Hello ${{ github.event.inputs.person }}"
+      run: echo "hello world"
